--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     Name:  <input style="margin-right: 5%;"> 
     Email: <input>
      <br>
-    Message me: <input style="height:100px;font-size:14pt; width: 30%; margin-top: 5%" id= "message">
+    Message me: <input style="height:85px;font-size:14pt; width: 20%; margin-top: 5%" id= "message">
+
+    <button class="button">Send</button>
 
    <ul> 
      <li class="inline-block">Portfolio</li>
