--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="nav-button-container">
       <ul class="nav-button-sub-container">
-        <li class="inline-block" href="#" >Portfolio</li>
+        <li class="inline-block" href="https://kellyhumphrey15.github.io/UX_UI_HW_20/" >Portfolio</li>
         <li class="inline-block" href="#" >About</li>
         <li class="inline-block" href="#" >Resume</li>
         <li class="inline-block" href="#" >Contact</li>
